@@ -30,10 +30,12 @@ import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.client.solrj.request.UpdateRequest;
+import org.apache.solr.client.solrj.response.CollectionAdminResponse;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.common.util.TimeSource;
 import org.apache.solr.core.SolrCore;
+import org.apache.solr.handler.admin.CoreAdminOperation;
 import org.apache.solr.logging.MDCLoggingContext;
 import org.apache.solr.update.processor.LogUpdateProcessorFactory;
 import org.apache.solr.util.LogListener;
@@ -181,5 +183,20 @@ public class TestSimplePropagatorDistributedTracing extends SolrCloudTestCase {
     var client = builder.build();
     client.connect();
     return client;
+  }
+
+  @Test
+  public void testInternalCollectionApiCommands() throws Exception {
+    String collecton = "testInternalCollectionApiCommands";
+    verifyCollectionCreation(collecton);
+  }
+
+  private void verifyCollectionCreation(String collection) throws Exception {
+    try (LogListener reqLog = LogListener.info(CoreAdminOperation.class.getName())) {
+      var a1 = CollectionAdminRequest.createCollection(collection, 2, 2);
+      CollectionAdminResponse r1 = a1.process(cluster.getSolrClient());
+      assertEquals(0, r1.getStatus());
+      assertSameTraceId(reqLog, null);
+    }
   }
 }
