@@ -27,6 +27,8 @@ Improvements
 * SOLR-16397: Swap core v2 endpoints have been updated to be more REST-ful.
   SWAP is now available at `POST /api/cores/coreName/swap` (Sanjay Dutt via Jason Gerlowski)
 
+* SOLR-17011: Add tracing spans to internal collection commands (Alex Deparvu)
+
 Optimizations
 ---------------------
 (No changes)
